welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:3: error: not found: value setColorCorps
  setColorCorps(Green)
  ^SnakeBuggle:3: error: not found: value Green
  setColorCorps(Green)
                ^